src/test/run-pass/unique-autoderef-field.rs
fn main() {
    let i = ~{
        j: 100
    };
    assert i.j == 100;
}