src/test/compile-fail/reserved-m64.rs
// error-pattern:reserved keyword

fn main() {
  let int m64 = 0;
}
